--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8">
     <title>Suveniri i Modeliranje</title>
     <link rel="stylesheet" type="text/css" href="css/slider.css">
+    <link rel="stylesheet" type="text/css" href="css/presentation.css">
+    <link rel="stylesheet" type="text/css" href="css/navigation.css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
   </head>
   <body>
     <div class="landing">
       <div class="slider">
+        <div class="nav"><a href="#suveniri" target="_blank">suveniri</a><a href="#modeliranje" target="_blank">modeliranje</a><a href="#galerija" target="_blank">galerija</a><a href="#kontakt" target="_blank">kontakt</a></div>
         <ul>
           <li>slide 1</li>
           <li>slide 2</li>
@@ -16,38 +20,43 @@
           <li>slide 5</li>
         </ul>
       </div>
-      <div class="godown"></div>
-    </div>
-    <div class="navigation"></div>
-    <div class="presentation" id="suveniri"><img src="images/" alt="">
-      <div class="gallery">
-        <div class="item">
-          <p>Cena</p>
-        </div>
-        <div class="item"><img src="images/" alt=""></div>
-        <div class="item">
-          <p>Cena</p>
-        </div>
-        <div class="item"><img src="images/" alt=""></div>
-        <div class="item">
-          <p>Cena</p>
-        </div>
-        <div class="item"><img src="images/" alt=""></div>
-        <div class="item">
-          <p>Cena</p>
-        </div>
-        <div class="item"><img src="images/" alt=""></div>
-        <div class="item"></div>
-        <div class="item"><a href="#galerija" target="_blank">  </a></div>
+      <div class="godown">
+        <button type=""></button>
       </div>
     </div>
-    <div class="presentation" id="modeliranje"><img src="images/" alt="">
-      <div class="gallery"><img src="images/" alt="">
-        <div class="cena"></div><img src="images/" alt="">
-        <div class="cena"></div><img src="images/" alt="">
-        <div class="cena"></div><img src="images/" alt="">
-        <div class="cena"></div>
-        <div class="cena"></div><a href="#galerija" target="_blank"></a>
+    <div class="navigation">
+      <button>suveniri</button>
+      <button>modeliranje</button>
+      <button>kontakt</button>
+    </div>
+    <div class="presentation" id="suveniri">
+      <div class="cover"></div>
+      <div class="gallery">
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><a href="#galerija" target="_blank">galerija</a></div>
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+      </div>
+    </div>
+    <div class="presentation" id="modeliranje">
+      <div class="cover"></div>
+      <div class="gallery">
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><img src="images/" alt=""></div>
+        <div class="item"></div>
+        <div class="item"><a href="#galerija" target="_blank">galerija</a></div>
       </div>
     </div>
     <div class="contactus"></div>
