Finished navigation bar and its functionality

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Suveniri i Modeliranje</title>
+    <!--build:css css/index.min.css-->
     <link rel="stylesheet" type="text/css" href="css/slider.css">
     <link rel="stylesheet" type="text/css" href="css/presentation.css">
     <link rel="stylesheet" type="text/css" href="css/navigation.css">
+    <!--endbuild-->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
   </head>
   <body>
@@ -25,7 +27,7 @@
       </div>
     </div>
     <div class="navigation">
-      <button>suveniri</button>
+      <button class="clicked">suveniri</button>
       <button>modeliranje</button>
       <button>kontakt</button>
     </div>
@@ -59,8 +61,11 @@
         <div class="item"><a href="#galerija" target="_blank">galerija</a></div>
       </div>
     </div>
-    <div class="contactus"></div>
+    <div class="contactus" id="kontakt"></div>
   </body>
 </html>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">       </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">   </script>
+<!--build:js js/index.min.js   -->
 <script type="application/javascript" src="js/slider.js"></script>
+<script type="application/javascript" src="js/navigation.js"></script>
+<!--endbuild-->
