Finished first page PS Compress images and fix gulp

--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,26 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <!--endbuild-->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <div class="landing">
         <div class="slider">
-          <div class="nav"><a href="#suveniri" target="_blank">suveniri</a><a href="#modeliranje" target="_blank">modeliranje</a><a href="#galerija" target="_blank">galerija</a><a href="#kontakt" target="_blank">kontakt</a></div>
+          <div class="nav">
+            <button>suveniri</button>
+            <button>modeliranje</button><a href="#galerija" target="_blank">galerija</a>
+            <button>kontakt</button>
+          </div>
           <ul>
-            <li>slide 1</li>
-            <li>slide 2</li>
-            <li>slide 3</li>
-            <li>slide 4</li>
-            <li>slide 5</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
           </ul>
         </div>
         <div class="godown">
@@ -37,9 +45,9 @@
         <div class="cover">
           <ul>
             <li id="suveniri1"></li>
-            <li class="hidden" id="suveniri2"></li>
-            <li class="hidden" id="suveniri3"></li>
-            <li class="hidden" id="suveniri4"></li>
+            <li id="suveniri2"></li>
+            <li id="suveniri3"></li>
+            <li id="suveniri4"></li>
           </ul>
         </div>
         <div class="gallery">
@@ -62,10 +70,26 @@
         <div class="cover">
           <ul>
             <li id="modeliranje1"></li>
-            <li class="hidden" id="modeliranje2"></li>
-            <li class="hidden" id="modeliranje3"></li>
-            <li class="hidden" id="modeliranje4"></li>
+            <li id="modeliranje2"></li>
+            <li id="modeliranje3"></li>
+            <li id="modeliranje4"></li>
           </ul>
+          <div class="contact" id="kontakt">
+            <div class="biggerblock">   
+              <div class="block">
+                <h2>Suveniri:</h2>
+                <h3>Danijela 0669602144</h3>
+              </div>
+              <div class="block">   
+                <h2>Modeliranje:</h2>
+                <h3>Zoran 0644735719</h3>
+              </div>
+            </div>
+            <div class="block">
+              <h2>Radno Vreme</h2>
+              <h3>9:00 - 21:00</h3>
+            </div>
+          </div>
         </div>
         <div class="gallery">
           <div class="item"></div>
@@ -83,12 +107,25 @@
             </div></a>
         </div>
       </div>
-      <div class="contactus" id="kontakt"></div>
+      <div class="contactus">
+        <div class="info">
+          <div class="contactblock">
+            <h2>Suveniri:</h2>
+            <h3>Danijela 0669602144</h3>
+          </div>
+          <div class="contactblock">
+            <h2>Modeliranje:</h2>
+            <h3>Zoran 0644735719</h3>
+          </div>
+          <button></button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">   </script>
 <!--build:js js/index.min.js-->
+<script type="application/javascript" src="js/main.js"></script>
 <script type="application/javascript" src="js/presentation.js"></script>
 <script type="application/javascript" src="js/slider.js"></script>
 <script type="application/javascript" src="js/navigation.js"></script>
